--- a/main.html
+++ b/main.html
@@ -5,9 +5,34 @@
 <head>
 	<link rel="stylesheet" href="styles.css">
 </head>
+	<style>
+		.holder{
+			display:flex;
+			justify-content:space-between;
+			flex-wrap:wrap;
+		}
+		.item{
+			background-color:red;
+			height:150px;
+			width:150px;
+		}
+		.item4{
+			background-color:green;
+		}
+		.item5{
+			background-color:blue;
+		}
+	</style>
 
 <body>
 	<!-- the entire body must be written by student -->
+	<div class="holder">
+		<div class="item">1</div>
+		<div class="item">2</div>
+		<div class="item">3</div>
+		<div  class="item item4">4</div>
+		<div class="item item5">5</div>
+	</div>
     <script type="text/javascript" src="./script.js">
 </script>
 
